<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    >

    <ImageView
        android:layout_gravity="center"
        android:src="@drawable/register_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/join_us"
        android:textColor="@color/text_hint_color"
        android:textSize="@dimen/text_xlarge"
        />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_medium"
        android:text="@string/name"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/text_hint_color"
        />

    <EditText
        android:id="@+id/et_register_userName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/blue_border"
        android:fontFamily="@font/poppins_light"
        android:textSize="@dimen/text_medium"
        android:paddingHorizontal="@dimen/margin_small"
        android:textColorHint="@color/text_hint_color"
        android:drawableEnd="@drawable/person_icon"
        android:hint="@string/enter_name" />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_medium"
        android:text="@string/email"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/text_hint_color"
        />

    <EditText
        android:id="@+id/et_register_userEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/blue_border"
        android:fontFamily="@font/poppins_light"
        android:textSize="@dimen/text_medium"
        android:paddingHorizontal="@dimen/margin_small"
        android:textColorHint="@color/text_hint_color"
        android:drawableEnd="@drawable/email_icon"
        android:hint="@string/enter_email" />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_medium"
        android:text="@string/password"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/text_hint_color"
        />

    <EditText
        android:id="@+id/et_register_userPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/blue_border"
        android:fontFamily="@font/poppins_light"
        android:textSize="@dimen/text_medium"
        android:paddingHorizontal="@dimen/margin_small"
        android:textColorHint="@color/text_hint_color"
        android:drawableEnd="@drawable/password_icon"
        android:hint="@string/enter_password" />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_medium"
        android:text="@string/confirm_password"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/text_hint_color"
        />

    <EditText
        android:id="@+id/et_register_userConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/blue_border"
        android:fontFamily="@font/poppins_light"
        android:textSize="@dimen/text_medium"
        android:paddingHorizontal="@dimen/margin_small"
        android:textColorHint="@color/text_hint_color"
        android:drawableEnd="@drawable/password_icon"
        android:hint="@string/enter_confirm_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_marginTop="46dp"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:background="@drawable/circular_button"
        android:layout_height="45dp"
        android:textStyle="bold"
        >
    </androidx.appcompat.widget.AppCompatButton>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            android:text="@string/login_check"
            android:fontFamily="@font/poppins_semi_bold"
            />

        <TextView
            android:id="@+id/tv_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/text_color"
            android:textSize="@dimen/margin_medium"
            android:fontFamily="@font/poppins_semi_bold"
            />

    </LinearLayout>


</LinearLayout>