<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    >

    <ImageView
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:src="@drawable/login_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login_text"
        android:textColor="@color/text_hint_color"
        android:textSize="@dimen/text_xlarge"
        >

    </TextView>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_medium"
        android:text="@string/login_username"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/text_hint_color"
        >

    </TextView>

    <EditText
        android:id="@+id/et_login_userName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/blue_border"
        android:fontFamily="@font/poppins_light"
        android:textSize="@dimen/text_medium"
        android:paddingHorizontal="@dimen/margin_small"
        android:textColorHint="@color/text_hint_color"
        android:drawableEnd="@drawable/person_icon"
        android:hint="@string/enter_username" />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_medium"
        android:text="@string/login_password"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/text_hint_color"
        >

    </TextView>

    <EditText
        android:id="@+id/et_login_userPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/blue_border"
        android:fontFamily="@font/poppins_light"
        android:textSize="@dimen/text_medium"
        android:paddingHorizontal="@dimen/margin_small"
        android:textColorHint="@color/text_hint_color"
        android:drawableEnd="@drawable/password_icon"
        android:hint="@string/enter_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/margin_medium"
        >

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/remember_me"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_small"
            android:fontFamily="@font/poppins_semi_bold"
            ></CheckBox>

        <TextView
            android:gravity="right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_small"
            android:text="@string/forgot_password"
            android:fontFamily="@font/poppins_semi_bold"
            android:textColor="@color/text_color"

            />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:text="@string/login_text"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:background="@drawable/circular_button"
        android:layout_height="45dp"
        android:textStyle="bold"
        >

    </androidx.appcompat.widget.AppCompatButton>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            android:text="@string/register_check"
            android:fontFamily="@font/poppins_semi_bold"
            />

        <TextView
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/text_color"
            android:textSize="@dimen/margin_medium"
            android:fontFamily="@font/poppins_semi_bold"
            />

    </LinearLayout>


</LinearLayout>