<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_border"
    android:orientation="horizontal"
    android:layout_marginBottom="10dp"
    android:padding="8dp">

    <View
        android:id="@+id/view_priorityDot"
        android:layout_width="12dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_marginEnd="@dimen/margin_small"
        android:background="@color/text_color" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/view_priorityDot">


        <TextView
            android:id="@+id/tv_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_toLeftOf="@id/tv_task_status"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/task_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_task_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/yellow_border"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/list_task_status"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_small" />


        <TextView
            android:id="@+id/tv_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_task_title"
            android:layout_alignParentLeft="true"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_light"
            android:maxLines="2"
            android:text="@string/task_description"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/tv_task_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_task_description"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/calendar_icon"
            android:drawablePadding="4dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/static_due_date"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/tv_task_due_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_task_due_date"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/time_icon"
            android:drawablePadding="4dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/static_due_time"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_medium" />

        <LinearLayout
            android:id="@+id/ll_actionButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_task_due_date"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/button_edit"
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_small"
                android:contentDescription="Edit"
                android:src="@drawable/edit_icon" />

            <ImageView
                android:id="@+id/button_delete"
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large"
                android:contentDescription="Delete"
                android:src="@drawable/delete_icon" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>

