<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/margin_medium"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/todo_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_xlarge"
            />

        <TextView
            android:id="@+id/settings"
            android:drawableEnd="@drawable/settings_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

    </LinearLayout>

    <ImageView
        android:layout_marginTop="10dp"
        android:id="@+id/et_profile_icon"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:padding="2dp"
        android:background="@drawable/circular_blue_border"
        android:src="@drawable/person_icon"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/dashboard_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/static_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_xlarge"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:cardCornerRadius="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/task_card_border">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/todo_background" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_large"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/no_of_tasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/static_task_no"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    android:fontFamily="@font/poppins_bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_task"
                    android:textColor="@color/black"
                    android:textSize="@dimen/margin_large"
                    android:fontFamily="@font/poppins_semi_bold" />
            </LinearLayout>

            <ImageView
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:src="@drawable/notebook" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTasks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_weight="1"
        tools:listitem="@layout/activity_todo_list_item" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_gravity="center"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:id="@+id/create_task_home_button"
        android:text="@string/create_task"
        android:drawableStart="@drawable/add_icon"
        android:drawablePadding="6dp"
        android:textSize="@dimen/text_medium"
        android:fontFamily="@font/poppins_bold"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/circular_button"
        android:layout_height="50dp"
        android:textStyle="bold" />

</LinearLayout>